Updated to better match example from part 2, course field added, changed status to completed for boolean
