# api/src/middleware/validateTask.js
@@ -1,22 +1,38 @@
 export default function validateTask(req, res, next) {
-    const {title, status} = req.body;
+    const {title, course, completed} = req.body;
 
-    //POST needs title and status
-    if (req.method == "POST") {
-        if (title === undefined || status === undefined) {
+    //POST needs title, course and completed
+    if (req.method === "POST") {
+        if (title === undefined || course === undefined || completed === undefined || typeof completed !== "boolean") {
             return res.status(400).json({
-                error: "title or status is missing"
+                error: "title, course or completed is missing"
             });
         }
     }
     //PATCH needs a field to update
 
     if (req.method === "PATCH") {
-        if (title == undefined && status === undefined) {
+        if (title == undefined && course === undefined && completed === undefined) {
             return res.status(400).json({
                 error: "One field required to update"
             });
         }
+
+        if (completed !== undefined && typeof completed !== "boolean") {
+            return res.status(400),json({
+                error: "completed field must be boolean"
+            });
+        }
     }
+
+    //PUT needs all fields
+    if (req.method === "PUT") {
+        if (title === undefined || course === undefined || completed === undefined || typeof completed !== "boolean") {
+            return res.status(400).json({
+                error: "title, course, and completed required"
+            });
+        }
+    }
+
     next();
 }
